infrastructure/03-apps/poll/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  namespace: poll
  labels:
    app: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: poll
          image: ghcr.io/ripitchip/slotline:sha-b8834ef
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
