infrastructure/03-apps/poll/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: poll
spec:
  selector:
    app: poll
  ports:
    - name: http
      port: 80
      targetPort: 3000
