infrastructure/03-apps/poll/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll
  namespace: poll
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
    - host: poll.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poll
                port:
                  number: 80
  tls:
    - hosts:
        - poll.foobarbaz.fr
      secretName: poll-tls
